# streamverif

./: LICENSE  README.md  README.txt  ast.ml  dune  dune-project  execution.ml  fixpoint.ml  main.ml  mylexer.mll  myparser.mly  state.ml  typechecker.ml  typechecker.mli
scripts/: evaluation.py  time.sh
tests/binary-search-tree/: bst-delete-rec-safe.unint.hidden  bst-find-safe.unint  bst-find-unsafe.unint  bst-insert-safe.unint  bst-insert-unsafe.unint  bst-remove-root-nonstreaming-coherent.unint  bst-remove-root-safe.unint  bst-remove-root-unsafe.unint
tests/misc/: avl-balance-safe.unint  avl-balance-unsafe.unint  binomial-heap-scratch.hidden  tree-rotate-left-safe.unint  tree-rotate-left-unsafe.unint
tests/singly-linked-list/: sll-append-safe.unint  sll-append-unsafe.unint  sll-copy-all-safe.unint  sll-copy-all-unsafe.unint  sll-delete-all-safe.unint  sll-delete-all-unsafe.unint  sll-deletebetween-safe.unint  sll-deletebetween-unsafe.unint  sll-find-safe.unint  sll-find-unsafe.unint  sll-insert-back-safe.unint  sll-insert-back-unsafe.unint  sll-insert-front-safe.unint  sll-insert-front-unsafe.unint  sll-insert-unsafe.unint  sll-reverse-safe.unint  sll-reverse-unsafe.unint
tests/sll-sorted/: sll-sorted-concat-safe.unint  sll-sorted-concat-unsafe.unint  sll-sorted-insert-safe.unint  sll-sorted-merge-noncaching.unint  sll-sorted-merge-safe.unint  sll-sorted-merge-unsafe-1.unint  sll-sorted-merge-unsafe-2.unint
